Added all the openapi spec
